# IntegratedWidgets

./: .gitignore  API.md  CHANGELOG.md  LICENSE  OBSERVABLES_5_MIGRATION.md  README.md  debug_binding.sh  debug_binding_pdb.py  pyproject.toml  pyrightconfig.json  test_binding_debug.py  test_blanking.py  test_combo_box.py  test_combo_box_isolated.py  test_combo_box_syntax.py  test_multi_observable.py  test_optional_text_entry_bug.py  test_output.txt
.githooks/: pre-commit
demos/: README.md  demo_all_widgets.py  demo_check_box.py  demo_check_box_controller.py  demo_dict_optional_selection.py  demo_display_real_united_scalar_controller.py  demo_display_value.py  demo_float_entry.py  demo_integer_entry.py  demo_integer_entry_controller.py  demo_radio_buttons.py  demo_radio_buttons_controller.py  demo_range_slider.py  demo_range_slider_controller.py  demo_real_united_scalar.py  demo_selection_option.py  demo_selection_option_controller.py  demo_selection_optional_option.py  demo_selection_optional_option_controller.py  demo_single_list_selection.py  demo_single_list_selection_controller.py  demo_text_entry.py  demo_unit_combo_box.py  demo_unit_combo_box_controller.py
docs/: ARCHITECTURE.md  DEMO_GUIDE.md  README.md
examples/: demo_qt_app.py  iq_widgets_demo.py  qt_signal_hook_example.py
licenses/: LGPL-3.0.txt  Qt_Notices.txt
scripts/: bump_version.py
tests/: conftest.py  run_tests.py  test_base_controller_composition.py  test_bridges.py  test_check_box.py  test_dict_controller.py  test_display_real_united_scalar.py  test_display_value_controller.py  test_edit_real_united_scalar.py  (+10 more)
(+214 files in other folders)
